<resources>
    <string name="app_name">Sprint 6</string>
    <string name="pantalla_inicio">Inicio Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="cotiza_compra">Cotiza y compra</string>
    <string name="polizas">Mis Pólizas</string>
    <string name="friends">¡Invita a un amigo!</string>
    <string name="about">Acerca</string>
    <string name="contact">Contacto</string>
    <string name="logout">Salir de la sesión</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="titulo_seleciona_vehiculo">Selecciona tu vehiculo</string>
    <string name="info_seguro">Me gustaría Cotizar y Comprar mi Seguro de: </string>
    <string name="print">Imprimir / Enviar por correo</string>
    <string name="autos">Auto Seleccionado</string>
    <string name="poliza">Póliza</string>
    <string name="quiero">Quiero</string>
    <string name="poliza_num">DZW025140000</string>
    <string name="condiciones">Condiciones Generales</string>
    <string name="poliza_seguro">Póliza Seguro</string>


    <string-array name="modelos">
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
    </string-array>

    <string-array name="marcas">
        <item>Acura</item>
        <item>Audi</item>
    </string-array>

    <string-array name="lineas">
        <item>RDX</item>
    </string-array>

    <string-array name="descripcion">
        <item>RDX CLIMA VIDRIOELEC BOLSAAIRE QUEMACOCOS MP3 DVD PIEL AUT 6 CIL 5 PTS</item>
    </string-array>

    <string name="api_key_google">AIzaSyDUpiMhnoULN3HfXyTy9v4AytF1yvlRQsk</string>



    <string-array name="selecciones">
        <item>Auto</item>
        <item>Vida</item>
        <item>Gastos Funerarios</item>
    </string-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAy9WUBxA6G7FMDiQ0C4TKFL5L8v8t6wr0</string>

    <string name="panorama">Panorama</string>
    <string name="mis_polizas">Mis Pólizas</string>
    <string name="cotizar">Cotizar</string>
    <string name="number">8</string>
    <string name="volver">Volver</string>
    <string name="name">RAYMUNDO DE JESUS CHAPA FLORES</string>
    <string name="rfc">R.F.C.: </string>
    <string name="rfc1">CAFR670520I50</string>
    <string name="poliza1">Póliza: </string>
    <string name="valor_poliza">3569</string>
    <string name="vigente">(Vigente)</string>
    <string name="prima_total">Prima total: </string>
    <string name="valor_prima">$ 11,957.05</string>
    <string name="endoso">(Incluye un endoso)</string>
    <string name="agente">Agente: </string>
    <string name="caja">CAJA PRODUCTOR</string>
    <string name="refresh">Renovar</string>
    <string name="cancelar">Cancelar</string>
    <string name="orden">Orden de trabajo N° NA</string>
    <string name="numero_cotiza">Número de cotización w7f5lx</string>
    <string name="admin">ADMINISTRADOR PRINCIPAL</string>
    <string name="ramo">Ramo:</string>
    <string name="subramo">Sub-ramo:</string>
    <string name="individual">Individual</string>
    <string name="vigencia">Vigencia:</string>
    <string name="fecha_vigencia">16/Jun/2016 al  16/Jun/2017</string>
    <string name="pago">Pago:</string>
    <string name="mensual">MENSUAL</string>
    <string name="moneda">Moneda:</string>
    <string name="peso">Peso</string>
    <string name="emisor">Emisor:</string>
    <string name="resumen_poliza">RESUMEN PÓLIZA</string>
    <string name="riesgo_as">Riesgo Asegurable</string>
    <string name="modelo">Modelo:</string>
    <string name="modelo_year">2016</string>
    <string name="marca">Marca: </string>
    <string name="marca_auto">Audi</string>
    <string name="descripcion">Descripción: </string>
    <string name="description">AUDI A3 S LINE 1.8L TFSI S TRONIC 180HP</string>
    <string name="serie">Serie:</string>
    <string name="serie_w">WAU8CF8V0GA129127</string>
    <string name="placa">Placa:</string>
    <string name="placa_v">STS3484</string>
    <string name="motor">Motor:</string>
    <string name="motor_v">CJS148012</string>
    <string name="datos_as">Datos del asegurado</string>
    <string name="nombre">Nombre:</string>
    <string name="paquete_amplia">Paquete: Amplia</string>
    <string name="sa">SA:</string>
    <string name="valor_comercial">Valor comercial + 10%</string>
    <string name="dm">DM:</string>
    <string name="porciento_dm">5%</string>
    <string name="rt">RT:</string>
    <string name="rc">RC:</string>
    <string name="valor_rc">$4,000,000</string>
    <string name="gm">GM:</string>
    <string name="valor_gm">$500,000</string>
    <string name="extr">ExtRC:</string>
    <string name="valor_extr">$4,000,000</string>
    <string name="asv">ASV:</string>
    <string name="amparada">Amparada</string>
    <string name="fi">FI:</string>
    <string name="valor_fi">$2,000,000</string>
    <string name="aac">AAC:</string>
    <string name="valor_aac">$100,000</string>
    <string name="apm">APM:</string>
    <string name="reportar">Reportar siniestro</string>
    <string name="aceptar">Aceptar</string>
    <string name="ver_detalles">Ver detalles</string>
    <string name="reporte">Para reportar un siniestro, le recordamos que es necesario conocer su número de póliza y la ubicación del siniestro.</string>
    <string name="telefono">Teléfono para reportar un siniestro, 01800 00 00 00.</string>
    <string name="desea">¿Deséa notificar a un ejecutivo de siniestros de Odessa Seguros?</string>
    <string name="meses">8 meses 27 días restantes</string>

    <string-array name="amplia">
        <item>$10,901</item>
        <item>$20,551</item>
        <item>$37,072</item>
    </string-array>
    <string-array name="limitada">
        <item>$6,561</item>
        <item>$6,721</item>
        <item>$22,115</item>
    </string-array>
    <string-array name="rc">
        <item>$2,772</item>
        <item>$3,763</item>
        <item>$4,149</item>
    </string-array>
    <string-array name="integral">
    </string-array>
    <string name="mensaje">Buscando el código postal</string>
    <string name="mensaje1">No se encontro el código postal favor de ingresarlo</string>
    <string name="vehiculo">El vehículo circula en el Código Postal:</string>


    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="dias">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="url">http://webapisegupoliza.odessaseguros.com</string>
</resources>
