<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/nav_cotiza_compra"
            android:checked="true"
            android:icon="@drawable/cotiza"
            android:title="@string/cotiza_compra"/>
        <item
            android:id="@+id/nav_polizas"
            android:checked="true"
            android:icon="@drawable/poliza"
            android:title="@string/polizas"/>
        <item
            android:id="@+id/nav_invita"
            android:checked="true"
            android:icon="@drawable/add"
            android:title="@string/friends"/>
        <item
            android:id="@+id/nav_acerca"
            android:checked="true"
            android:icon="@drawable/about"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_contacto"
            android:checked="true"
            android:icon="@drawable/contact"
            android:title="@string/contact"/>
        <item
            android:id="@+id/nav_logout"
            android:checked="true"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>
</menu>