<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_orange"
        android:text="@string/panorama"
        android:textColor="@color/title_fragment"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:drawableLeft="@drawable/alert_bell"
            android:layout_gravity="end"
            android:paddingLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Existen"
            android:drawablePadding="8dp"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:layout_weight="2"/>
        <TextView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="nuevas notificaciones"/>
    </LinearLayout>
    <ImageView
        android:layout_marginTop="@dimen/espacio_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/linea_separadora"/>
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        android:layout_gravity="center"

        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mis_polizas"
                android:layout_gravity="center"
                android:gravity="center"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/btn_mis_polizas"
                    android:src="@drawable/polizas"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/number"
                    android:textSize="@dimen/title_orange"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp" />
            </RelativeLayout>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <com.daimajia.slider.library.SliderLayout
                   android:layout_marginTop="@dimen/espacio_card_view"
                   android:id="@+id/slider"
                   android:layout_width="match_parent"
                   android:layout_height="200dp"
                   custom:pager_animation="Default"
                   custom:auto_cycle="true"
                   custom:indicator_visibility="visible"
                   custom:pager_animation_span="1100">
                   <Button
                       style="?android:attr/buttonStyleSmall"
                       android:layout_width="match_parent"
                       android:layout_height="25dp"
                       android:text="@string/cotizar"
                       android:textColor="@color/colorWhite"
                       android:background="@drawable/background_button_pop"
                       android:id="@+id/button"
                       android:layout_alignParentBottom="true"
                       android:layout_centerHorizontal="true"
                       android:layout_marginBottom="35dp" />
               </com.daimajia.slider.library.SliderLayout>
               <com.daimajia.slider.library.Indicators.PagerIndicator
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   custom:selected_color="#0095BF"
                   custom:unselected_color="#553333"
                   custom:shape="oval"
                   custom:selected_padding_left="5dp"
                   custom:selected_padding_right="5dp"
                   custom:unselected_padding_left="5dp"
                   custom:unselected_padding_right="5dp"
                   android:layout_gravity="center"
                   custom:selected_width="6dp"
                   custom:selected_height="6dp"
                   custom:unselected_width="6dp"
                   custom:unselected_height="6dp"
                   android:layout_marginBottom="6dp"/>
               <com.daimajia.slider.library.Indicators.PagerIndicator
                   android:id="@+id/custom_indicador2"
                   style="@style/AndroidImageSlider_Corner_Oval_Orange"
                   android:gravity="center_horizontal"
                   android:layout_gravity="center_horizontal"/>
           </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>