<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/car"/>
                <TextView
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Paliot 2007"
                    android:textSize="28dp"
                    android:textColor="@color/colorPrimary"
                    />
                <ImageView
                    android:layout_weight=".5"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/logo" />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:src="@drawable/boton_seleccionar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/poliza"
                        android:textSize="24dp"
                        android:textColor="@android:color/black"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quiero"
                        android:textSize="24dp"
                        android:textColor="@android:color/black"
                        android:layout_weight="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/poliza_num"
                            android:textColor="@color/colorPrimary"
                            android:textSize="22dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ver Detalles"
                            android:textColor="@color/colorAccent"/>
                        <!--<LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:text="@string/condiciones"
                                android:layout_weight="1"
                                />
                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:text="@string/poliza_seguro"/>
                        </LinearLayout>-->
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="details"
                        android:layout_weight="1">
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scrollbars="vertical"
                            android:spinnerMode="dropdown"
                            android:id="@+id/quiero_polizas"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@drawable/boton_seleccionar"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Vigencia:"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:text="15/03/2016 - 30/06/2016"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/details"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Baja a partir:"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="26/16/2016"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Motivo: "
                            android:textColor="@android:color/black"
                            android:textSize="16sp"/>
                        <Spinner
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scrollbars="vertical"
                            android:spinnerMode="dropdown"
                            android:id="@+id/motivo"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>